fix myaccount sub menu

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -165,7 +165,7 @@
 	}
 
 	.subbox {
-		min-width: 160px;
+		min-width: 180px;
 		margin: 0;
 		padding-left: 0;
 		visibility: hidden;
@@ -183,7 +183,7 @@
 
 		a {
 			font-size: 14px;
-			padding: 10px;
+			padding: 10px 20px;
 			display: block;
 		}
 	}
