--- a/style.css
+++ b/style.css
@@ -5006,7 +5006,7 @@ dd {
 }
 
 .my-account .subbox {
-  min-width: 160px;
+  min-width: 180px;
   margin: 0;
   padding-left: 0;
   visibility: hidden;
@@ -5028,7 +5028,7 @@ dd {
 
 .my-account .subbox a {
   font-size: 14px;
-  padding: 10px;
+  padding: 10px 20px;
   display: block;
 }
 
