--- a/assets/css/sass/modules/themify-icons.scss
+++ b/assets/css/sass/modules/themify-icons.scss
@@ -7,7 +7,7 @@
         url('assets/fonts/themify.svg') format('svg');
     font-weight: normal;
     font-style: normal;
-    font-display: auto
+    font-display: swap;
 }
 
 [class^="ti-"], [class*=" ti-"] {
