--- a/style.css
+++ b/style.css
@@ -4316,6 +4316,48 @@ dd {
   direction: rtl;
 }
 
+.no-sidebar .entry-content .alignfull {
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  max-width: 100vw;
+  width: 100vw;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.no-sidebar .entry-content .alignwide {
+  margin-left: -100px;
+  margin-right: -100px;
+  max-width: unset;
+  width: unset;
+}
+
+.no-sidebar .entry-content .wp-block-image.alignfull,
+.no-sidebar .entry-content .wp-block-embed-wordpress-tv.alignfull,
+.no-sidebar .entry-content .wp-block-gallery.alignfull {
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
+}
+
+.no-sidebar .alignfull img {
+  width: 100vw;
+}
+
+article p:last-child {
+  clear: both;
+}
+
+#comments {
+  clear: both;
+}
+
+.wp-caption,
+.wp-block-embed,
+.wp-block-image {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .elementor-template-full-width:not(.single-product) #content .woostify-container {
   max-width: 100%;
   padding-left: 0;
