--- a/style.css
+++ b/style.css
@@ -4326,8 +4326,6 @@ dd {
 }
 
 .no-sidebar .entry-content .alignwide {
-  margin-left: -100px;
-  margin-right: -100px;
   max-width: unset;
   width: unset;
 }
@@ -4345,6 +4343,10 @@ dd {
 
 article p:last-child {
   clear: both;
+}
+
+.category-block .entry-content p {
+  line-height: initial;
 }
 
 #comments {
