update add to cart button css

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -712,6 +712,7 @@
 		vertical-align: top;
 		padding-top: 0;
 		padding-bottom: 0;
+		pointer-events: auto;
 
 		@media (max-width: 600px) {
 			min-width: auto;
