--- a/style.css
+++ b/style.css
@@ -8631,6 +8631,7 @@ header.elementor-element {
   vertical-align: top;
   padding-top: 0;
   padding-bottom: 0;
+  pointer-events: auto;
 }
 
 @media (max-width: 600px) {
