--- a/assets/css/sass/base/base/guttenberg.scss
+++ b/assets/css/sass/base/base/guttenberg.scss
@@ -1,29 +1,48 @@
 // Guttenberg
-.no-sidebar {
-    .entry-content {
-        .alignfull {
-            margin-left: calc(-50vw + 50%);
-            margin-right: calc(-50vw + 50%);
-            max-width: 100vw;
-            width: 100vw;
-            padding-left: 2rem;
-            padding-right: 2rem;
-        }
-        .alignwide {
-            max-width: unset;
-            width: unset;
-        }
-        .wp-block-image.alignfull,
-        .wp-block-embed-wordpress-tv.alignfull,
-        .wp-block-gallery.alignfull {
-            padding-left: 0.6rem;
-            padding-right: 0.6rem;
-        }
+.no-sidebar:not(.site-boxed-container) {
+    .alignfull {
+        margin-left: calc(-50vw + 50%);
+        margin-right: calc(-50vw + 50%);
+        max-width: 100vw;
+        width: 100vw;
+    }
+    .alignwide {
+        max-width: unset;
+        width: unset;
     }
     .alignfull {
         img {
             width: 100vw;
         }
+    }
+    .alignwide {
+        margin-left: -100px;
+        margin-right: -100px;
+        max-width: unset;
+        width: unset;
+    }
+    &.site-full-width-container {
+        .alignwide {
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+    }
+    &.site-full-width-stretched-container {
+        .alignwide {
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+    }
+}
+.site-content-boxed-container.no-sidebar {
+    .alignfull {
+        width: auto;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+    .alignwide {
+        margin-left: -10px;
+        margin-right: -10px;
     }
 }
 
