fix style table dowload myaccount.

--- a/assets/css/sass/woocommerce/my-account.scss
+++ b/assets/css/sass/woocommerce/my-account.scss
@@ -2,14 +2,11 @@
 .download-file {
 	.button {
 		@media ( min-width: 767px ) {
-			display: block;
+			display: inline-block;
 			padding: 10px;
 		}
 	}
 }
-.download-remaining,
-.download-expires {
-	.nobr {
-		white-space: nowrap;
-	}
+table.shop_table {
+	word-break: normal;
 }
