fix input checkout mobile

--- a/style.css
+++ b/style.css
@@ -9753,6 +9753,10 @@ header.elementor-element {
   clear: both;
 }
 
+.woocommerce-checkout input {
+  word-break: normal;
+}
+
 .woocommerce-form-login-toggle {
   max-width: 600px;
   margin: 0 auto 10px auto;
