--- a/style.css
+++ b/style.css
@@ -11558,6 +11558,29 @@ table.shop_table {
   word-break: normal;
 }
 
+.password-input {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+}
+
+.show-password-input {
+  position: absolute;
+  right: .7em;
+  top: .7em;
+  cursor: pointer;
+}
+
+.show-password-input:before {
+  font-family: "themify";
+  content: "\e63d";
+}
+
 body.dokan-dashboard .dokan-dash-sidebar ul.dokan-dashboard-menu li.active:after {
   left: auto;
   right: 0;
