update fix widget breadcrumb not show mobile

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -939,6 +939,11 @@
 		.woostify-breadcrumb {
 			display: none;
 		}
+		.elementor-widget-woostify-breadcrumb {
+			.woostify-breadcrumb {
+				display: block;
+			}
+		}
 	}
 }
 
