update total price for checkout

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -332,6 +332,7 @@
 	.woocommerce-shipping-totals {
 		flex-direction: column;
 		padding-top: 5px;
+		display: block;
 
 		td {
 			text-align: left !important;
