update erro fix my_account not class processing

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -29,7 +29,7 @@ $size: 40px;
 }
 
 // Updating...
-.processing {
+.processing:not(.um-woo-status) {
 	pointer-events: none;
 	position: relative;
 	@extend .circle-loading;
