update quickview title link

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -27,6 +27,11 @@ $size: 40px;
 		display: none;
 	}
 }
+.single-product {
+	.product_title.entry-title {
+		pointer-events: none;
+	}
+}
 
 // Updating...
 .processing:not(.um-woo-status) {
