change color Lost password to white

--- a/style.css
+++ b/style.css
@@ -7196,6 +7196,8 @@ header.elementor-element {
 
 .woocommerce-error li a {
   float: right;
+  color: #ffffff;
+  text-decoration: underline;
 }
 
 @media (max-width: 600px) {
