--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -426,6 +426,8 @@ $size: 40px;
 
 		a {
 			float: right;
+			color: #ffffff;
+			text-decoration: underline;
 		}
 
 		@media (max-width: 600px) {
