style css layout header 2

--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -328,3 +328,13 @@
 		}
 	}
 }
+
+// Header Layout 2
+.sidebar-menu-open {
+	.has-header-layout-2 {
+		#view {
+		    -webkit-transform: translateX(0px);
+			transform: translateX(0px);
+		}
+	}
+}
