hide taxrate on first step checkout

--- a/assets/css/sass/woocommerce/cart-sidebar.scss
+++ b/assets/css/sass/woocommerce/cart-sidebar.scss
@@ -117,6 +117,11 @@ $media: 599px;
     ul{
     	margin: 0;
     }
+
+    // Remove wc loading
+    .blockUI {
+		display: none !important;
+	}
 }
 
 .shop-cart-count,
