--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -579,6 +579,15 @@
 		}
 	}
 
+	// First step
+	.multi-step-checkout-wrapper.first {
+		~ .woocommerce-checkout-review-order {
+			.tax-rate {
+				display: none;
+			}
+		}
+	}
+
 	.multi-step-inner {
 		margin-top: 50px;
 		position: relative;
