update prefix css selector

--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -582,7 +582,7 @@
 	// First step
 	.multi-step-checkout-wrapper.first {
 		~ .woocommerce-checkout-review-order {
-			.tax-rate {
+			tr[class^="tax-"] {
 				display: none;
 			}
 		}
