--- a/assets/css/sass/base/layout/blog/layout.scss
+++ b/assets/css/sass/base/layout/blog/layout.scss
@@ -33,7 +33,7 @@ $sidebar_width: percentage( 270 / 1170 );
 		@include flex( flex, space-between, flex-start );
 		flex-wrap: wrap;
 
-		.post{
+		>article {
 			margin-bottom: 75px;
 			padding-bottom: 0;
 			border-bottom: 0;
@@ -48,7 +48,7 @@ $sidebar_width: percentage( 270 / 1170 );
 				flex-basis: calc( ( 100%  - 60px ) / 3 );
 			}
 
-			+ .post {
+			+ article {
 				margin-top: 0;
 			}
 		}
@@ -84,7 +84,7 @@ $sidebar_width: percentage( 270 / 1170 );
 .blog-layout-standard{
 	.site-main{
 		@media ( min-width: $screen-sm ) {
-			.post{
+			>article {
 				display: flex;
 			}
 			.entry-image-link {
@@ -110,7 +110,7 @@ $sidebar_width: percentage( 270 / 1170 );
 .blog-layout-zigzag{
 	.site-main{
 		@media ( min-width: $screen-md ) {
-			.post{
+			>article {
 				display: flex;
 				&:nth-child(even) {
 					.loop-post-inner {
